# quail

./: .gitignore  AGENTS.md  CHANGELOG.md  CODEX.md  LICENSE  Makefile  QUAIL_CODEX_CONTEXT.md  README.md  TODO.md  install.sh  pyproject.toml  requirements.txt  upgrade.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: task.yml
.github/workflows/: black-diff.yml  ci.yml
config/: config.example.env
docs/: ARCHITECTURE.md  DEPRECATIONS.md  GLOSSARY.md  INDEX.md  MODES.md  PHASE8_ACCEPTANCE_CHECKLIST.md  QUAIL_2_0_SPEC.md  QUAIL_SPAM_MITIGATION_PLAN.md  ROADMAP.md  RUNBOOK.md  STATUS.md  TESTING.md  WEBSOCKET_INBOX_CHECKLIST.md  WEBSOCKET_INBOX_PLAN.md  quail_spam_mitigation_plan.md
docs/adr/: 0000-template.md  0001-html-rendering-model.md  0001-ingest-decision-pipeline.md  0002-inbox-websocket-upgrade.md  0002-quarantine-retention.md  0003-auth-and-rbac.md  0004-outbound-auth-email.md  0005-stripe-billing-gate.md  (+2 more)
postfix/: maincf.snippet  mastercf_pipe.snippet  virtual
quail/: __init__.py  db.py  ingest.py  logging_config.py  purge.py  security.py  settings.py  web.py
scripts/: quail-ingest  quail-mode
systemd/: quail-purge.service  quail-purge.timer  quail.service
tests/: conftest.py  helpers.py  test_admin_message_ops.py  test_admin_settings_api.py  test_attachments_api.py  test_css_bundle.py  test_domain_policies_api.py  test_html_rendering.py  test_inbox_api.py  test_ingest_decision.py  test_metrics.py  test_phase8_acceptance.py  test_purge_retention.py  test_quarantine_api.py  test_rules_api.py  test_smoke.py  test_ui_smoke.py
(+80 files in other folders)
