[project]
name = "quail"
version = "0.4.0-beta.3"
description = "Self-hosted, receive-only mail sink"
readme = "README.md"
requires-python = ">=3.11"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
markers = [
  "unit: fast, isolated checks",
  "api: FastAPI/TestClient coverage",
  "integration: end-to-end workflows across modules",
  "slow: long-running or heavy tests",
]
